--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: ai-resume-skill-gap-analyzer
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn -b 0.0.0.0:10000 app:app
     plan: free
     autoDeploy: false
     envVars:
